@@ -1,17 +1,0 @@
-/* $Id$  */
-
-/* CSS overrides for Views-based autocomplete results.
-  - #autocomplete uses "white-space:pre", which is no good with
-    Views' template-based rendering
-  - Field titles are rendered with <label> in default templates,
-    but we don't want the 'form' styling it gets under .form-item
-*/
-
-.form-item #autocomplete .nodereference-autocomplete {
-  white-space:normal;
-}
-
-.form-item #autocomplete .nodereference-autocomplete label {
-  display:inline;
-  font-weight:normal;
-}
